Fixed recipe image stretching in recipe page

--- a/MegaBite/src/components/recipePage/RecipePage.css
+++ b/MegaBite/src/components/recipePage/RecipePage.css
@@ -157,11 +157,12 @@ div > span:last-of-type:after { content: "" }
 
 .img {
     width: 100%;
+    height: 100%;
     max-height: 483px;
     margin-left: 30px;
     margin-right: 70px;
     margin-top: 10px;
-    
+    object-fit: contain;
 }
 
 .info {
